--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="loadSite">
 </div>
 <script>
-    $(".loadSite").html('<object data="https://www.itccompliance.mydev/itc">');
+    $(".loadSite").html('<object data="https://www.yourwebsite.com">');
     $("object").css("width", "100%");
     $("object").css("height", "100vh");
 </script>
